# vwsi

./: .appveyor.yml  .gitignore  .travis.yml  CMakeLists.txt  README.md
Libraries/: FindVulkan.cmake
Sources/: CMakeLists.txt  CMakeSources.cmake  KeyCodes.hpp  Main.cpp
Sources/Shells/: Shell.cpp  Shell.hpp  ShellWin32.cpp  ShellWin32.hpp
cmake/: FindVulkan.cmake
include/VWSI/: vulkan_wsi.h  vulkan_wsi.hpp
include/wsi/: vulkan_wsi.h
scripts/: README.md  genvk.py  vwsi.xml
src/: CMakeLists.txt  CMakeSources.cmake  vulkan_wsi.c  win32_imp.c  wsi_win32.c  wsi_xcb.c
test/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt  main.cpp
